hphp/test/quick/lsb_static_redeclare1.php.expectf

Fatal error: Cannot redeclare LSB static A::x as B::x in %s on line 7
